# SkyengTestTask

./: .gitignore  .pre-commit-config.yaml  README.md  TASK.md  docker-compose.local.yaml  docker-compose.yaml  template.env
app/src/: conftest.py  pyproject.toml
app/src/accounts/: forms.py  models.py  urls.py  views.py
app/src/accounts/migrations/: 0001_initial.py
app/src/accounts/tests/: test_forms.py
app/src/code_checks/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
app/src/code_checks/migrations/: 0001_initial.py  0002_check_created_check_is_sent_alter_check_file.py  0003_periodictaskrun_alter_check_created_and_more.py  0004_remove_check_exit_code_check_result.py  0005_remove_check_is_sent_alter_check_file.py
app/src/code_checks/tests/: test_tasks.py
app/src/config/: settings.py  urls.py
app/src/search/: forms.py  urls.py  views.py
app/src/search/tests/: test_forms.py  test_views.py
app/src/templates/: _base.html  _dashboard_page.html
app/src/templates/account/: _login_and_signup_template.html  change_password.html  login.html  signup.html
app/src/templates/checks/: check_detail.html  checks_list.html
app/src/templates/components/: _footer.html  _header.html  _sidebar.html
app/src/templates/pages/: about.html  home.html
app/src/templates/search/: _search_form.html  base_page.html  results.html
app/src/templates/user_files/: user_file_create_or_update.html  user_file_detail.html  user_files_list.html
app/src/user_files/: admin.py  apps.py  models.py  urls.py  views.py
app/src/user_files/migrations/: 0001_initial.py  (+1 more)
(+25 files in other folders)
